Replace Runtime.exec(String) with Runtime.exec(String[]) to avoid Java 21 deprecation warning.